# nomad-monad

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: admin.py  apps.py  context_processor.py  forms.py  models.py  render.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py  0001_squashed_0003_rename_id_experience_unique_id.py  0002_alter_experience_options_alter_experience_id.py  0002_basesection_home_profile.py  0003_rename_id_experience_unique_id.py
project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base_template.html  contact.html  footer.html  header.html  history.html  pdf_template.html  profile.html
